salesforce-main/src/main/default/objects/Lead/fields/Location_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Interest__c</fullName>
    <label>Location of Interest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abingdon</fullName>
            </value>
            <value>
                <fullName>Birmingham</fullName>
            </value>
            <value>
                <fullName>Bristol</fullName>
            </value>
            <value>
                <fullName>Cambridge</fullName>
            </value>
            <value>
                <fullName>Cardiff</fullName>
            </value>
            <value>
                <fullName>Croydon</fullName>
            </value>
            <value>
                <fullName>Edinburgh</fullName>
            </value>
            <value>
                <fullName>eLearning Center</fullName>
            </value>
            <value>
                <fullName>Glasgow</fullName>
            </value>
            <value>
                <fullName>Leeds</fullName>
            </value>
            <value>
                <fullName>Liverpool</fullName>
            </value>
            <value>
                <fullName>London - City</fullName>
            </value>
            <value>
                <fullName>London - Holborn</fullName>
            </value>
            <value>
                <fullName>London - King&apos;s Cross</fullName>
            </value>
            <value>
                <fullName>London - Liverpool Street</fullName>
            </value>
            <value>
                <fullName>London - Procter House</fullName>
            </value>
            <value>
                <fullName>London - Shepherds Bush</fullName>
            </value>
            <value>
                <fullName>London - Waterloo</fullName>
            </value>
            <value>
                <fullName>Maidstone</fullName>
            </value>
            <value>
                <fullName>Manchester</fullName>
            </value>
            <value>
                <fullName>Milton Keynes</fullName>
            </value>
            <value>
                <fullName>Newcastle</fullName>
            </value>
            <value>
                <fullName>Nottingham</fullName>
            </value>
            <value>
                <fullName>Preston</fullName>
            </value>
            <value>
                <fullName>Reading</fullName>
            </value>
            <value>
                <fullName>Sheffield</fullName>
            </value>
            <value>
                <fullName>Southampton</fullName>
            </value>
            <value>
                <fullName>Online Classroom Live</fullName>
            </value>
            <value>
                <fullName>Online Classroom</fullName>
            </value>
            <value>
                <fullName>Distance Learning Basics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>