salesforce-main/src/main/default/objects/Lead/fields/Marketing_Media_Source__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Media_Source__c</fullName>
    <label>Marketing Media Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>