salesforce-main/src/main/default/objects/Lead/fields/Marketing_Medium__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Medium__c</fullName>
    <label>Marketing Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>