salesforce-main/src/main/default/objects/Lead/fields/MC_GUID__c.field-meta.xml
<CustomField>
    <fullName>MC_GUID__c</fullName>
    <description>Tracking field populated by Marketing Cloud</description>
    <label>MC GUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>