salesforce-main/src/main/default/objects/Lead/fields/Mode_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Interest__c</fullName>
    <label>Mode of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full Time</fullName>
            </value>
            <value>
                <fullName>Full Time - Accelerated</fullName>
            </value>
            <value>
                <fullName>Part Time Day</fullName>
            </value>
            <value>
                <fullName>Part Time Weekend</fullName>
            </value>
            <value>
                <fullName>Part Time 1 Evening</fullName>
            </value>
            <value>
                <fullName>Part Time 2 Evenings</fullName>
            </value>
            <value>
                <fullName>Part Time Saturday</fullName>
            </value>
            <value>
                <fullName>Part Time Distance Learning</fullName>
            </value>
            <value>
                <fullName>Full Time Distance Learning</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Online Classroom Live</fullName>
            </value>
            <value>
                <fullName>Online Classroom</fullName>
            </value>
            <value>
                <fullName>Distance Learning Basics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>