salesforce-main/src/main/default/objects/Lead/fields/Modified_By_Score__c.field-meta.xml
<CustomField>
    <fullName>Modified_By_Score__c</fullName>
    <description>Modified By lead score</description>
    <formula>CASE( LastModifiedBy.UserRole.Name,
&apos;System / API&apos;, 10,
&apos;System Administrator&apos;, 25,
50 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modified By Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>