salesforce-main/src/main/default/objects/Lead/fields/Modified_Date_Score__c.field-meta.xml
<CustomField>
    <fullName>Modified_Date_Score__c</fullName>
    <description>Last Modified Date lead score</description>
    <formula>IF ( ( NOW() - LastModifiedDate ) &lt;= 1, 60,
IF ( ( NOW() - LastModifiedDate ) &lt;= 5, 30,
IF ( ( NOW() - LastModifiedDate ) &lt;= 10, 10,
0 )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modified Date Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>