salesforce-main/src/main/default/objects/Lead/fields/Nearest_Relevant_BPP_Office__c.field-meta.xml
<CustomField>
    <fullName>Nearest_Relevant_BPP_Office__c</fullName>
    <label>Nearest/Relevant BPP Office</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Birmingham</fullName>
            </value>
            <value>
                <fullName>Bristol</fullName>
            </value>
            <value>
                <fullName>Cambridge</fullName>
            </value>
            <value>
                <fullName>Cardiff</fullName>
            </value>
            <value>
                <fullName>Croydon</fullName>
            </value>
            <value>
                <fullName>Glasgow</fullName>
            </value>
            <value>
                <fullName>Leeds</fullName>
            </value>
            <value>
                <fullName>Liverpool</fullName>
            </value>
            <value>
                <fullName>London - Kings Cross</fullName>
            </value>
            <value>
                <fullName>London - Liverpool Street</fullName>
            </value>
            <value>
                <fullName>London - Procter Street</fullName>
            </value>
            <value>
                <fullName>London - Shepherds Bush</fullName>
            </value>
            <value>
                <fullName>London - Waterloo</fullName>
            </value>
            <value>
                <fullName>Luton</fullName>
            </value>
            <value>
                <fullName>Maidstone</fullName>
            </value>
            <value>
                <fullName>Manchester</fullName>
            </value>
            <value>
                <fullName>Milton Keynes</fullName>
            </value>
            <value>
                <fullName>Newcastle upon Tyne</fullName>
            </value>
            <value>
                <fullName>Nottingham</fullName>
            </value>
            <value>
                <fullName>Reading</fullName>
            </value>
            <value>
                <fullName>Southampton</fullName>
            </value>
            <value>
                <fullName>Channel - Guernsey</fullName>
            </value>
            <value>
                <fullName>Channel - Jersey</fullName>
            </value>
            <value>
                <fullName>China - Beijing</fullName>
            </value>
            <value>
                <fullName>China - Shanghai</fullName>
            </value>
            <value>
                <fullName>Czech Republic - Prague</fullName>
            </value>
            <value>
                <fullName>Ireland - Dublin</fullName>
            </value>
            <value>
                <fullName>Ireland - Limmerick</fullName>
            </value>
            <value>
                <fullName>Hungary - Budapest</fullName>
            </value>
            <value>
                <fullName>Malta - Ta&apos; Xbiex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>