salesforce-main/src/main/default/objects/Lead/fields/Offer_accepted_or_declined__c.field-meta.xml
<CustomField>
    <fullName>Offer_accepted_or_declined__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offer accepted or declined</label>
    <type>Checkbox</type>
</CustomField>