salesforce-main/src/main/default/objects/Lead/fields/Offer_deferred__c.field-meta.xml
<CustomField>
    <fullName>Offer_deferred__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offer deferred</label>
    <type>Checkbox</type>
</CustomField>