salesforce-main/src/main/default/objects/Lead/fields/Owner_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Owner_Change_Date__c</fullName>
    <label>Owner Change Date</label>
    <type>Date</type>
</CustomField>