salesforce-main/src/main/default/objects/Lead/fields/Parents_Guardian_Emergency_Phone__c.field-meta.xml
<CustomField>
    <fullName>Parents_Guardian_Emergency_Phone__c</fullName>
    <label>Parents/Guardian/Emergency Phone</label>
    <type>Phone</type>
</CustomField>