salesforce-main/src/main/default/objects/Lead/fields/Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>Passport_Number__c</fullName>
    <description>Passport number for Lead.</description>
    <label>Passport Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>