salesforce-main/src/main/default/objects/Lead/fields/Payment_received_or_assured_by_employer__c.field-meta.xml
<CustomField>
    <fullName>Payment_received_or_assured_by_employer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment received or assured by employer</label>
    <type>Checkbox</type>
</CustomField>