salesforce-main/src/main/default/objects/Lead/fields/PE_Appt_booked__c.field-meta.xml
<CustomField>
    <fullName>PE_Appt_booked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PE Appt booked</label>
    <type>Checkbox</type>
</CustomField>