salesforce-main/src/main/default/objects/Lead/fields/PE_assessment_setup__c.field-meta.xml
<CustomField>
    <fullName>PE_assessment_setup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PE assessment setup</label>
    <type>Checkbox</type>
</CustomField>