salesforce-main/src/main/default/objects/Lead/fields/Phone_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Phone_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Phone Opt In field in line with GDPR compliance. Linked to Marketing Cloud and student preference centre</description>
    <label>Phone Opt In</label>
    <type>Checkbox</type>
</CustomField>