salesforce-main/src/main/default/objects/Lead/fields/Phone_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Phone_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phone Opt Out</label>
    <type>Checkbox</type>
</CustomField>