salesforce-main/src/main/default/objects/Lead/fields/Preferred_Email__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Email__c</fullName>
    <label>Preferred Email</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Work</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>