salesforce-main/src/main/default/objects/Lead/fields/Preferred_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Preferred_First_Name__c</fullName>
    <label>Preferred First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>