salesforce-main/src/main/default/objects/Lead/fields/Preferred_Phone__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Phone__c</fullName>
    <label>Preferred Phone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Work</fullName>
            </value>
            <value>
                <fullName>Parents/Guardian/Emergency</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>