salesforce-main/src/main/default/objects/Lead/fields/PS_Profile_Services_ID__c.field-meta.xml
<CustomField>
    <fullName>PS_Profile_Services_ID__c</fullName>
    <label>Profile Services ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>