salesforce-main/src/main/default/objects/Lead/fields/Rating_Combined__c.field-meta.xml
<CustomField>
    <fullName>Rating_Combined__c</fullName>
    <label>Rating Combined</label>
    <length>50</length>
    <type>Text</type>
</CustomField>