salesforce-main/src/main/default/objects/Lead/fields/rfi_are_you_a__c.field-meta.xml
<CustomField>
    <fullName>rfi_are_you_a__c</fullName>
    <description>this is apicklist used by rfi form</description>
    <label>Are you a</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UK/EU students</fullName>
            </value>
            <value>
                <fullName>International student (Non-EU)</fullName>
            </value>
            <value>
                <fullName>Training Manager/Employer</fullName>
            </value>
            <value>
                <fullName>Secondary school/college representative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>