salesforce-main/src/main/default/objects/Lead/fields/rfi_Are_you_currently_studying_with_us__c.field-meta.xml
<CustomField>
    <fullName>rfi_Are_you_currently_studying_with_us__c</fullName>
    <label>Are you currently studying with us?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>