salesforce-main/src/main/default/objects/Lead/fields/rfi_Are_you_EU_UK__c.field-meta.xml
<CustomField>
    <fullName>rfi_Are_you_EU_UK__c</fullName>
    <label>Are you EU/UK?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UK Student</fullName>
            </value>
            <value>
                <fullName>EU Student</fullName>
            </value>
            <value>
                <fullName>International Student</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>