salesforce-main/src/main/default/objects/Lead/fields/rfi_Area_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>rfi_Area_of_Interest__c</fullName>
    <description>this is the select list for rfi</description>
    <label>Area of Interest - RFI</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>rfi_Are_you_EU_UK__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Accommodation</fullName>
            </value>
            <value>
                <fullName>Accountancy</fullName>
            </value>
            <value>
                <fullName>Administration and Company Secretarial</fullName>
            </value>
            <value>
                <fullName>Alumni services and events</fullName>
            </value>
            <value>
                <fullName>Apprenticeships</fullName>
            </value>
            <value>
                <fullName>Banking and Finance</fullName>
            </value>
            <value>
                <fullName>Books and learning materials</fullName>
            </value>
            <value>
                <fullName>Business and Management</fullName>
            </value>
            <value>
                <fullName>Business Services</fullName>
            </value>
            <value>
                <fullName>Careers service</fullName>
            </value>
            <value>
                <fullName>Clubs and societies</fullName>
            </value>
            <value>
                <fullName>Courses</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Foundation Courses</fullName>
            </value>
            <value>
                <fullName>Graduation</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Insolvency</fullName>
            </value>
            <value>
                <fullName>Law</fullName>
            </value>
            <value>
                <fullName>Leadership and Personal Development</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Management and Leadership</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Open days and education events</fullName>
            </value>
            <value>
                <fullName>Pre-Masters Courses</fullName>
            </value>
            <value>
                <fullName>Preparatory English</fullName>
            </value>
            <value>
                <fullName>Probono</fullName>
            </value>
            <value>
                <fullName>Retail Distribution Review</fullName>
            </value>
            <value>
                <fullName>Secondary education (MPW)</fullName>
            </value>
            <value>
                <fullName>Student finance (loans and scholarships)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>