salesforce-main/src/main/default/objects/Lead/fields/Rfi_Area_of_study_or_training__c.field-meta.xml
<CustomField>
    <fullName>Rfi_Area_of_study_or_training__c</fullName>
    <description>part of the rfi form</description>
    <label>Area of study or training</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounting (including ACCA, CIMA, AAT, ICAEW)</fullName>
            </value>
            <value>
                <fullName>Actuarial programmes</fullName>
            </value>
            <value>
                <fullName>Banking, Finance and Insurance</fullName>
            </value>
            <value>
                <fullName>Business and Management</fullName>
            </value>
            <value>
                <fullName>Chiropractic</fullName>
            </value>
            <value>
                <fullName>Pre-or in-sessional English Language</fullName>
            </value>
            <value>
                <fullName>Facilities Management</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Insolvency</fullName>
            </value>
            <value>
                <fullName>Law (including GDL, LPC, BPTC)</fullName>
            </value>
            <value>
                <fullName>Marketing (including CIM)</fullName>
            </value>
            <value>
                <fullName>Tax (including AAT and CTA)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>