salesforce-main/src/main/default/objects/Lead/fields/rfi_Course_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>rfi_Course_of_Interest__c</fullName>
    <label>Course of Interest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AAT</fullName>
            </value>
            <value>
                <fullName>ACA</fullName>
            </value>
            <value>
                <fullName>Academic English</fullName>
            </value>
            <value>
                <fullName>ACCA</fullName>
            </value>
            <value>
                <fullName>ACCA Professional Level Papers</fullName>
            </value>
            <value>
                <fullName>Accountancy/Taxation Professional Apprenticeship</fullName>
            </value>
            <value>
                <fullName>Actuarial Technician Apprenticeship</fullName>
            </value>
            <value>
                <fullName>Actuary Apprenticeship</fullName>
            </value>
            <value>
                <fullName>Advanced Diploma in Accounting and Finance [ACCA Route]</fullName>
            </value>
            <value>
                <fullName>Agile Thinking in a Changing Business World</fullName>
            </value>
            <value>
                <fullName>Analytical and Critical Thinking</fullName>
            </value>
            <value>
                <fullName>Application Support Lead - Level 4</fullName>
            </value>
            <value>
                <fullName>Apprenticeship Accounting</fullName>
            </value>
            <value>
                <fullName>Apprenticeship Business and Administration</fullName>
            </value>
            <value>
                <fullName>Apprenticeship Customer Service</fullName>
            </value>
            <value>
                <fullName>Apprenticeship General</fullName>
            </value>
            <value>
                <fullName>Apprenticeship Law</fullName>
            </value>
            <value>
                <fullName>Apprenticeship Professional Services</fullName>
            </value>
            <value>
                <fullName>Assistant Accountant Apprenticeship</fullName>
            </value>
            <value>
                <fullName>Associate Project Manager Apprenticeship</fullName>
            </value>
            <value>
                <fullName>ATT</fullName>
            </value>
            <value>
                <fullName>Barrister Training Course (BTC)</fullName>
            </value>
            <value>
                <fullName>Bar Transfer Test (BTT)</fullName>
            </value>
            <value>
                <fullName>BSc Accounting and Finance</fullName>
            </value>
            <value>
                <fullName>BSc Nursing (Adult)</fullName>
            </value>
            <value>
                <fullName>BSc Nursing (Child)</fullName>
            </value>
            <value>
                <fullName>BSc Nursing (Mental Health)</fullName>
            </value>
            <value>
                <fullName>BTC Part 1</fullName>
            </value>
            <value>
                <fullName>BTC Part 2</fullName>
            </value>
            <value>
                <fullName>Building Effective Coaching Skills</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>