salesforce-main/src/main/default/objects/Lead/fields/rfi_How_did_you_hear_about_us_other__c.field-meta.xml
<CustomField>
    <fullName>rfi_How_did_you_hear_about_us_other__c</fullName>
    <label>How did you hear about us - Other</label>
    <type>TextArea</type>
</CustomField>