salesforce-main/src/main/default/objects/Lead/fields/Rfi_Interactive__c.field-meta.xml
<CustomField>
    <fullName>Rfi_Interactive__c</fullName>
    <description>part of the rfi form</description>
    <label>Interactive</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>download prospectus</fullName>
            </value>
            <value>
                <fullName>watch lecture</fullName>
            </value>
            <value>
                <fullName>watch video</fullName>
            </value>
            <value>
                <fullName>Take test now</fullName>
            </value>
            <value>
                <fullName>play quiz now</fullName>
            </value>
            <value>
                <fullName>play game now</fullName>
            </value>
            <value>
                <fullName>request call back</fullName>
            </value>
            <value>
                <fullName>request email contact</fullName>
            </value>
            <value>
                <fullName>request more information</fullName>
            </value>
            <value>
                <fullName>Reporting a problem with the website</fullName>
            </value>
            <value>
                <fullName>Download a whitepaper/research paper</fullName>
            </value>
            <value>
                <fullName>Marketing preference</fullName>
            </value>
            <value>
                <fullName>Entering a competition – word answer</fullName>
            </value>
            <value>
                <fullName>Competition – multiple choice answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>