salesforce-main/src/main/default/objects/Lead/fields/Rfi_Level_of_study__c.field-meta.xml
<CustomField>
    <fullName>Rfi_Level_of_study__c</fullName>
    <description>used in the rfi Form</description>
    <label>Level of study</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Undergraduate</fullName>
            </value>
            <value>
                <fullName>Postgraduate</fullName>
            </value>
            <value>
                <fullName>Professional Qualifications</fullName>
            </value>
            <value>
                <fullName>CPD/Professional Development</fullName>
            </value>
            <value>
                <fullName>Apprenticeships</fullName>
            </value>
            <value>
                <fullName>Higher Education Certificate in Health and Social Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>