salesforce-main/src/main/default/objects/Lead/fields/Rfi_Mode_of_study_or_training__c.field-meta.xml
<CustomField>
    <fullName>Rfi_Mode_of_study_or_training__c</fullName>
    <description>for the rfi form</description>
    <label>Mode of study or training</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Online learning</fullName>
            </value>
            <value>
                <fullName>Face-to-face</fullName>
            </value>
            <value>
                <fullName>Blended learning (combined online, face-to-face)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>