salesforce-main/src/main/default/objects/Lead/fields/RFI_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>RFI_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RFI Opt-In (prospective student would like to receive future e-mails of similar nature)</description>
    <inlineHelpText>RFI Opt-In (prospective student would like to receive future e-mails of similar nature)</inlineHelpText>
    <label>RFI Opt-In</label>
    <type>Checkbox</type>
</CustomField>